# vscode-project-templates

./: CHANGELOG.md  README.md  package-lock.json  package.json
src/: projectTemplatesPlugin.ts
templates/CMake C++/: CMakeLists.txt
templates/CMake C++/tests/: #{TESTS_FILE=tests}.cpp  CMakeLists.txt
